tests/neg-custom-args/captures/i21614.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:12:33 ---------------------------------------
12 |  files.map((f: F) => new Logger(f)) // error, Q: can we make this pass (see #19076)?
   |                                 ^
   |Found:    (f : F)
   |Required: File^{any}
   |
   |Note that capability `any²` is not included in capture set {any}.
   |
   |where:    any  is a root capability classified as SharedCapability created in anonymous function of type (f²: F): Logger when checking argument to parameter f of constructor Logger
   |          any² is a root capability classified as SharedCapability in the type of parameter f
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:15:12 ---------------------------------------
15 |  files.map(new Logger(_)) // error, Q: can we improve the error message?
   |            ^^^^^^^^^^^^^
   |Found:    (_$1: File^'s1) ->{C} Logger{val f: File^{_$1}}^{_$1}
   |Required: File^{C} => Logger{val f: File^'s2}^'s3
   |
   |Note that capability `C` is not classified as trait SharedCapability, therefore it
   |cannot be included in capture set 's1 of parameter _$1 of SharedCapability elements.
   |
   |where:    => refers to a root capability created in method mkLoggers2 when checking argument to parameter f of method map
   |
   | longer explanation available when compiling with `-explain`
